@@ -1,5 +1,17 @@
 2011-07-02  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
+	PR debug/49408
+	* cp-demangle.c (d_print_comp): Suppress argument list for function
+	references by the '&' unary operator.  Keep also already processed
+	variant without the argument list.  Suppress argument list types for
+	function call used in an expression.
+	* testsuite/demangle-expected: Fix excessive argument list types in
+	`test for typed function in decltype'.  New testcase for no argument
+	list types printed.  3 new testcases for function references by the
+	'&' unary operator..
+
+2011-07-02  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
 	* cp-demangle.c (d_print_comp) <DEMANGLE_COMPONENT_FUNCTION_TYPE>:
 	Suppress d_print_mod for DMGL_RET_POSTFIX.
 	* testsuite/demangle-expected: New testcases for --ret-postfix.
